--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -4,7 +4,7 @@
 \date{\vspace{-6ex}}
 
 \begin{document}
-	\sloppy
+	%\sloppy
 	\maketitle
 	
 	\chapter{Foundations}\clearpage
@@ -14,6 +14,8 @@
 	\subfile{\foundationsDir/Logic}
 	\newpage
 	\subfile{\foundationsDir/Functions}
+	\newpage
+	\subfile{"\foundationsDir/Modular"}
 	\newpage
 	\subfile{"\foundationsDir/Numbers"}
 	\newpage
