--- a/tex/Algebra/Inner Product Spaces.tex
+++ b/tex/Algebra/Inner Product Spaces.tex
@@ -1130,7 +1130,7 @@
 			\[ U^* A U = T \]
 			is diagonal and $A$ is unitarily diagonalisable.
 		\end{proof}
-		\begin{corollary}
+		\begin{corollary}\label{coro:real-matrix-orthogonally-diagonalisable-iff-symmetric}
 			A real matrix is orthogonally diagonalisable iff it is symmetric.
 		\end{corollary}
 		\begin{proof}
@@ -1278,8 +1278,31 @@
 			\boxeddefinition{\textbf{(Quadratic Form)} A \textit{quadratic form} in ${ n \geq 2 }$ variables is a polynomial over the reals in which every term has degree 2 in the variables.\\
 				In matrix form, a quadratic form $q$ is an expression,
 				\[ q = \x^T A \x \]
-				where ${ A \in \R{n \times n} }$ is symmetric and ${ \x \in \R{n} }$.
+				where ${ A \in \R{n \times n} }$ is symmetric and ${ \x \in \R{n} }$.\\
+				
+				The matrix $A$ is said to be \textit{positive definite} if the quadratic form $q$ is positive definite and, similarly if it is positive negative, semi-definite, etc.
 			}
+		
+			\biggerskip
+			\labeledProposition{Let $A$ be a symmetric real matrix. Then,
+				\begin{itemize}
+					\item if all eigenvalues of $A$ are positive then $A$ is positive definite;
+					\item if all eigenvalues of $A$ are non-negative then $A$ is positive semi-definite;
+					\item if all eigenvalues of $A$ are negative then $A$ is negative definite;
+					\item if all eigenvalues of $A$ are non-positive then $A$ is negative semi-definite;
+					\item if the eigenvalues of $A$ are of mixed sign then $A$ is indefinite;
+					\item 
+				\end{itemize}
+			}{definiteness-of-matrices-by-sign-of-eigenvalues}
+			\begin{proof}
+				Since $A$ is a real symmetric matrix it is orthogonally diagonalisable (\autoref{coro:real-matrix-orthogonally-diagonalisable-iff-symmetric}) and there exists an invertible matrix $P$ and a diagonal matrix $D$ such that,
+				\[ A = \inv{P} D P = P^T D P. \]
+				So, the quadratic form ${ q(\x) = \x^T A \x }$ can be rewritten
+				\[ q(\x) = \x^T A \x = \x^T P^T D P \x = (P\x)^T D (P\x). \]
+				If we let ${ \y = P\x }$ and ${ D = \operatorname{diag}(\lambda_1, \lambda_2, \dots, \lambda_n) }$ then
+				\[ q(\x) = \y^T D \y = \lambda_1 y_1^2 + \lambda_2 y_2^2 + \cdots + \lambda_n y_n^2 = \sum_{i=1}^n \lambda_i y_i^2. \]
+				Written in this way, it's clear to see that the quadratic form is the sum of terms that are the product of an eigenvalue and a square of a real number. The square of a real number is positive definite and so every term will be positive definite if every eigenvalue is positive and positive semi-definite if every eigenvalue is non-negative. Similar reasoning follows also for negative definite and negative semi-definite.
+			\end{proof}
 		
 			\bigskip
 			\labeledProposition{A matrix is positive definite iff all its principal minors (\ref{def:principal-minors}) are positive.}{matrix-is-positive-definite-iff-all-principal-minors-are-positive}
@@ -1294,10 +1317,17 @@
 			\end{proof}
 		
 			\bigskip
-			\note{Note that there is no simple check for positive or negative semi-definiteness (see example \ref{ex:principal-minors-check-indeterminate-case}).}
+			\note{\begin{itemize}
+					\item If the principal minors don't fall into either pattern of all positive or alternating signs and the determinant of the matrix is non-zero, then we can conclude that the matrix is indefinite.
+					\item If the determinant of the matrix is 0 then we only know that at least one of the eigenvalues is 0.
+					\item There is no simple check for positive or negative semi-definiteness (see example \ref{ex:principal-minors-check-indeterminate-case}).
+				\end{itemize}
+			}
+			
+			
 			
 			\bigskip
-			\labeledProposition{Let ${ A \in \F{m \times n} }$ be a matrix with full column rank (i.e. ${ \operatorname{rank} A = n }$ defined in an inner product space equipped with the standard complex inner product (\ref{def:inner-product}). Then ${ A^* A }$ is:
+			\labeledProposition{Let ${ A \in \F{m \times n} }$ be a matrix with full column rank (i.e. ${ \operatorname{rank} A = n }$) defined in an inner product space equipped with the standard complex inner product (\ref{def:inner-product}). Then ${ A^* A }$ is:
 				\begin{enumerate}[label=(\roman*)]
 					\item{Hermitian,}
 					\item{Invertible.}
@@ -1337,7 +1367,7 @@
 						\[ A^* A \x = \0 \implies \x = \0 \]
 						it follows that
 						\[ N(A^* A) = \{\0\} \]
-						which, by \autoref{coro:linear-transformation-is-injective-iff-kernel-is-trivial}, implies that ${ A^* A }$ is invertible.
+						which, by \autoref{coro:linear-transformation-is-injective-iff-kernel-is-trivial}, implies that ${ A^* A }$ is injective. Since ${ A^* A }$ is ${ n \times n }$ and injective then it is also surjective (\TODO{review this}) and is therefore bijective and invertible.
 					}
 				\end{enumerate}
 			\end{proof}
@@ -1365,10 +1395,13 @@
 								0 & 0 & t
 							\end{bmatrix}.
 					\]
+					where ${ t \in \R{} }$ is any real number.\\
+					
 					The eigenvalues of $A$ are ${ \lambda \in \{ 0,2,t \} }$. The principal minors of $A$ are
 					\[
 						a_{11} = 1, \hspace{20pt} \begin{vmatrix}1 & 1\\ 1 & 1\end{vmatrix} = 0, \hspace{20pt} \det{A} = 0.
 					\]
+					Notice that the values of the principal minors do not depend on the value of $t$. So $t$ could be any real number --- positive or negative or zero --- and the principal minors would come out the same. Clearly, in such a case, the principal minors do not inform us about the definiteness of the matrix.
 				}\label{ex:principal-minors-check-indeterminate-case}
 			\end{exe}
 		}
