--- a/tex/Algebra/Linear Transformations.tex
+++ b/tex/Algebra/Linear Transformations.tex
@@ -2747,7 +2747,11 @@
 				\[ T\v = T(\w_1 + \w_2) = \w_1. \]
 			}
 		\end{enumerate}
-		The projection of $V$ onto $W_1$ --- often denoted $P_{W_1}$ ---  is described as \textit{parallel} to $W_2$ because the displacement vector, from the original vector to its projected image, is in $W_2$. If we have,
+		The projection of $V$ onto $W_1$ --- often denoted $P_{W_1}$ ---  is described as \textit{parallel} to $W_2$ because the displacement vector, from the original vector to its projected image,
+		\[ (\w_1 + \w_2) - T(\w_1 + \w_2) = (\w_1 + \w_2) - \w_1 = \w_2 \]
+		is in $W_2$.\\
+		
+		If we have,
 		\[ W_1^\perp = W_2 \]
 		then the projection is further described as an \textit{orthogonal projection}.
 	}
