After Analysis AMA

--- a/tex/Algebra/Inner Product Spaces.tex
+++ b/tex/Algebra/Inner Product Spaces.tex
@@ -360,7 +360,7 @@
 			If a vector ${ \v \in V }$ of arbitrary norm is divided by its norm (i.e. scalar multiplied by the reciprocal of its norm), then
 			\[ \u = \frac{1}{\norm{\v}} \v \]
 			is a unit vector colinear with $\v$. This process is known as \textbf{normalization} of the vector $\v$.
-		}
+		\label{def:unit-vector}}
 		
 		\medskip
 		\labeledProposition{If $\x$ is a vector in a normed space over a field $\F{}$ and ${ \alpha \in \F{} }$ then,
