--- a/tex/Algebra/Linear Transformations.tex
+++ b/tex/Algebra/Linear Transformations.tex
@@ -277,7 +277,7 @@
 		\end{proof}
 	
 		\medskip
-		\labeledTheorem{Every linear transformation ${ \F{n} \longmapsto \F{m} }$ is left multiplication by a particular ${ m \times n }$ matrix.}{every_lin_transform_is_left_multiplication_by_a_particular_matrix}
+		\labeledProposition{Every linear transformation ${ \F{n} \longmapsto \F{m} }$ is left multiplication by a particular ${ m \times n }$ matrix.}{every-lin-transform-is-left-multiplication-by-a-particular-matrix}
 		\begin{proof}
 			For any ${ \V{x} = \langle x_1,\dots,x_n \rangle \in \F{n} }$ we can write it as,
 			\[ x_1\e{1} + \cdots + x_n\e{n}. \]
