--- a/tex/reference/code examples.tex
+++ b/tex/reference/code examples.tex
@@ -32,6 +32,22 @@
 		\caption{The blue arrows are vectors whose scalar multiples will all be in the same line as the blue arrows but the red arrow shows what happens if we add them; the result lies outside of both lines.}
 		\label{fig:label-must-go-here}
 	\end{figure}
+
+	\subsubsection{Grouped Images}
+	\begin{figure}[h!]
+		\begin{minipage}{0.9\textwidth} 
+			\includegraphics[width=\linewidth]{\resourceDir/img/Analysis/bounded_subset_of_Rm_centred_on_the_origin.png}    
+			\caption{A bounded subset of $\R{m}$ centred on the origin.}
+			\label{fig:label1}  
+		\end{minipage}
+		
+		\vspace{0.75cm}
+		\begin{minipage}{0.9\textwidth} 
+			\includegraphics[width=\linewidth]{\resourceDir/img/Analysis/bounded_subset_of_Rm_not_centred_on_the_origin.png}    
+			\caption{A bounded subset of $\R{m}$ not centred on the origin.}
+			\label{fig:label2}   
+		\end{minipage}			
+	\end{figure}
 	
 	\subsection{Tables}
 	\begin{table}[h!]%
@@ -144,5 +160,10 @@
 			\ENDFOR 
 		\end{algorithmic}	
 	\end{algorithm}
+
+	\subsection{Jump List}
+	{\tiny 
+		\hyperref[ssssection:well-known-non-negative-series]{Well-Known Series} \hspace{20pt} \hyperref[ssssection:convergence-tests-for-non-negative-series]{Convergence Tests}
+	}
 	
 \end{document}
