Update pdf and some topology

--- a/tex/Analysis/Analysis.tex
+++ b/tex/Analysis/Analysis.tex
@@ -141,6 +141,14 @@
 		Formally, if a set ${ X \subseteq \R{} }$ is a \textit{closed set} then every convergent sequence $(x_n)$ with ${ x_n \in X }$ for all ${ n \in \N{} }$ has
 		\[ \lim_{n \to \infty} x_n \; \in X. \]
 		\label{def:closed-set}}
+		
+		\note{Note that sets may be both open and closed or neither open or closed. For example:
+			\begin{itemize}
+				\item The set of all real numbers $\R{}$ is both open and closed; and
+				\item the interval ${ (0,1] }$ is neither open nor closed.
+			\end{itemize}
+			It's also worth noting that ${ [1, \infty) }$ may appear to be neither open nor closed but is, in fact, closed.
+		}
 	
 	
 		\nl[12]
@@ -151,6 +159,49 @@
 			But also
 			\[ (x - \epsilon, x + \epsilon) \subseteq U_i \; \implies \; (x - \epsilon, x + \epsilon) \subseteq \bigcup_{i \in I} U_i. \]
 			Therefore, if each $U_i$ is an open set it follows that $\bigcup_{i \in I} U_i$ is an open set also.
+		\end{proof}
+	
+		\bigskip
+		\labeledProposition{The intersection of a collection of finitely many open sets is an open set.}{intersection-of-finitely-many-open-sets-is-an-open-set}
+		\begin{proof}
+			Let ${ I = \N{}_n = \{ 1, 2, \dots, n \} }$ and let every set in the indexed family ${ \setc{A_i}{i \in I} }$ be an open set. Then, if ${ x \in \bigcap_{i \in I} A_i }$ it follows that, for each ${ i \in I }$,
+			\[ x \in A_i \; \implies \; \exists \epsilon_i \logicsep (x - \epsilon_i, x + \epsilon_i) \subseteq A_i. \]
+			Since there are a finite number, $n$, of sets $A_i$ and so the set ${ \setc{\epsilon_i}{i \in I} }$ is also finite, then it has a minimum. If we take
+			\[ \epsilon = \min \setc{\epsilon_i}{i \in I} \]
+			then we have,
+			\[ \forall i \in I \logicsep (x - \epsilon, x + \epsilon) \subseteq A_i \; \implies \; (x - \epsilon, x + \epsilon) \subseteq \bigcap_{i \in I} A_i.  \qedhere \]
+		\end{proof}
+	
+		\bigskip
+		\labeledProposition{The intersection of a collection of infinitely many open sets is not, in general, an open set.}{intersection-of-infinitely-many-open-sets-is-not-necessarily-an-open-set}
+		\begin{proof}
+			Let ${ \setc{U_i}{i \in \N{}} }$ be a family of open sets such that ${ U_i = (-1/i, 1/i) }$. Then, for ${ x \in \bigcap_{i \in I} U_i }$ it follows that, for each ${ i \in I }$,
+			\[ x \in U_i \; \implies \; \exists \epsilon_i \logicsep (x - \epsilon_i, x + \epsilon_i) \subseteq U_i. \]
+			However, in this case, if we take the minimum of the $\epsilon_i$, there is no minimum and instead we have an infimum,
+			\[ \inf \setc{\epsilon_i}{i \in I} = \inf \setc{1/i}{i \in \N{}} = 0. \]
+			Therefore, the widest neighbourhood that is contained in all the $U_i$ is ${ (x - 0, x + 0) }$ which is to say, no neighbourhood. So there is only a single element in ${ x \in \bigcap_{i \in I} U_i }$ and the only element that it can be is 0.
+		\end{proof}
+	
+		
+		\bigskip
+		\labeledProposition{A set ${ C \subset \R{} }$ is closed iff its complement ${ \R{}\setminus C }$ is open.}{subset-of-R-is-closed-iff-complement-is-open}
+		\begin{proof}
+			Assume $C$ is closed. Then, by the definition of a closed set (\ref{def:closed-set}), for every sequence $(x_n)$,
+			\[ \forall n \in \N{} \logicsep x_n \in C \; \implies \; \lim_{n \to \infty} x_n \; \in C. \]
+			Suppose, for contradiction, that ${ \R{} \setminus C }$ is not open so that, negating the definition of an open set (\ref{def:open-set}), there exists some ${ x \in \R{} \setminus C }$ such that,
+			\[ \forall \epsilon > 0 \logicsep (x - \epsilon, x + \epsilon) \centernot\subseteq \R{} \setminus C. \]
+			But then, there exists some sequence $(x_n)$ with ${ \abs{x_n - x} = 1/n = \epsilon }$ such that
+			\[ \forall n \in \N{} \logicsep x_n \in C \; \land \; \lim_{n \to \infty} x_n = x \; \centernot\in C. \]
+			This contradicts the hypothesis that $C$ is a closed set and so ${ \R{} \setminus C }$ is open.\\
+			
+			\nl
+			Conversely, suppose ${ \R{} \setminus C }$ is open and suppose, for contradiction, that $C$ is not closed. Then there exists some sequence $(x_n)$, such that
+			\[ \forall n \in \N{} \logicsep x_n \in C \; \land \; \lim_{n \to \infty} x_n \; \centernot\in C. \]
+			But then there is some ${ y = \lim_{n \to \infty} x_n \in \R{} \setminus C }$ with, for every ${ \epsilon > 0 }$, some $x_n$ such that
+			\[ \abs{x_n - y} < \epsilon \; \implies \; x_n \in (y - \epsilon, y + \epsilon) \]
+			which, since ${ x_n \in C }$, implies that
+			\[ (y - \epsilon, y + \epsilon) \centernot\subseteq \R{} \setminus C \]
+			contradicting the hypothesis that ${ \R{} \setminus C }$ is open. Therefore $C$ is closed.
 		\end{proof}
 	
 		
@@ -174,6 +225,54 @@
 			\[ i > 1/x \; \implies \; 1/i < x \leq 2 \; \implies \; x \in A_i \; \implies \; x \in \bigcup_{i \in I} A_i. \]
 			Therefore ${ (0, 2] \subseteq \bigcup_{i \in I} A_i }$.
 		\end{exe}
+	
+	
+		\nl[16]
+		\subsubsubsection{Open and Closed Sets in \texorpdfstring{$\R{m}$}{Rm}}
+		\nl[4]
+		\boxeddefinition{\textbf{(Open Ball)} For ${ \x \in \R{m} }$ and ${ \epsilon > 0 \in \R{} }$, the \textit{open ball of radius $\epsilon$ around $\x$} is defined as the set,
+		\[ B_{\epsilon}(\x) = \setc{\y}{ \norm{\x - \y} < \epsilon }. \]
+		\label{def:open-ball}}
+	
+		\boxeddefinition{\textbf{(Open Set in $\R{m}$)} A set ${ X \subseteq \R{m} }$ is \textit{open} iff, for any ${ \x \in X }$, there exists ${ \epsilon > 0 }$ such that,
+			\[ B_{\epsilon}(\x) \subseteq X. \]
+		\label{def:open-set-in-Rm}}
+	
+		\biggerskip
+		\labeledProposition{Any open ball is an open set.}{open-ball-is-open-set}
+		\begin{proof}
+			Let ${ B_\epsilon(\x) }$ be an open ball around an element ${ \x \in X \subseteq \R{m} }$. Then for any ${ \y \in B_\epsilon(\x) }$ there exists
+			\[ \delta = \epsilon - \norm{\x - \y} > 0 \]
+			such that, for any ${ \z \in B_\delta(\y) }$,
+			\[ \norm{\x - \z} = \norm{\x - \y + \y - \z} \leq \norm{\x - \y} + \norm{\y - \z} < \norm{\x - \y} + \delta = \epsilon. \]
+			Therefore ${ \z \in B_\epsilon(\x) }$ and so
+			\[ B_\delta(\y) \subseteq B_\epsilon(\x). \]
+			So ${ B_\epsilon(\x) }$ is an open set.
+		\end{proof}
+	
+		\bigskip
+		\labeledProposition{Theorem 5.7}{}
+		\begin{proof}
+			\nl[6]\TODO{complete this}
+		\end{proof}
+	
+	
+		\biggerskip
+		\subsubsection{Compactness}
+		\bigskip
+		\boxeddefinition{\textbf{(Compact Set)} A set ${ C \subseteq \R{m} }$ is \textit{compact} iff, any sequence with all its terms in $C$, has a convergent subsequence converging to a point in $C$.
+		\label{def:compact-set}}
+	
+		\biggerskip
+		\labeledTheorem{\textbf{(Heine-Borel Theorem)} A set ${ C \subseteq \R{m} }$ is \textit{compact} iff it is both closed and bounded.}{heine-borel}
+		\begin{proof}
+			\nl[6]\TODO{complete this}
+		\end{proof}
+	
+		\labeledTheorem{Theorem 5.11}{}
+		\begin{proof}
+			\nl[6]\TODO{complete this}
+		\end{proof}
 	}
 
 
